java/java-tests/testData/codeInsight/daemonCodeAnalyzer/annotations/packageAnnotationNotInPackageInfo.java
<error descr="Package annotations should be in the package-info.java file">@Deprecated</error> package annotations.packageAnnotationNotInPackageInfo; 